--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>This is my first github project</h1>
     <h2>Look mama, I'm using github</h2>
 </body>
 </html>
