--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>This is my first github project</h1>
+    <img src="HAPPY21.jpg" alt="HAPPY21">
     <h2>Look mama, I'm using github</h2>
 </body>
 </html>
