--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is my first github project</h1>
+    <h1>21% Discount on all product</h1>
     <img src="HAPPY21.jpg" alt="HAPPY21">
-    <h2>Look mama, I'm using github</h2>
+    <h2>
+        <a href="https://almikhzaam.com">Al Mikhzaam</a>
+    </h2>
 </body>
 </html>
