--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>21% Discount on all product</h1>
-    <img src="HAPPY21.jpg" alt="HAPPY21" class="responsive">
+
+    <img src="HAPPY21.jpg" alt="HAPPY21" class="center">
+
     <h2>
         <a href="https://almikhzaam.com">Al Mikhzaam</a>
     </h2>
